--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,30 @@
     box-sizing: border-box;
 }
 
+
+:root{
+    --body-color: #efefef;
+    --nav-color: #1876f2;
+    --bg-color: #fff;
+}
+
+.dark-theme{
+    --body-color: #0a0a0a;
+    --nav-color: #000;
+    --bg-color: #000;
+}
+
+
+
 body{
-    background: #efefef;
+    background: var(--body-color);
+    transition: background 0.3s;
 }
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1876f2;
+    background: var(--nav-color);
     padding: 5px 5%;
     position: sticky;
     top: 0;
@@ -107,7 +123,7 @@ nav{
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    background: #fff;
+    background: var(--bg-color);
     padding: 20px;
     border-radius: 4px;
     color: #626262;
@@ -134,7 +150,7 @@ nav{
 }
 
 .imp-links a:last-child{
-    color: #1876f2;
+    color: var(--nav-color);
 }
 .imp-links{
     border-bottom: 1px solid #ccc;
@@ -269,7 +285,7 @@ nav{
     bottom: 10px;
     width: 100%;
     text-align: center;
-    color: #fff;
+    color: var(--bg-color);
     font-size: 14px;
 }
 .story1{
@@ -298,7 +314,7 @@ nav{
 
 .write-post-container{
     width: 100%;
-    background: #fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -368,7 +384,7 @@ nav{
 
 .post-container{
     width: 100%;
-    background: #fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -391,7 +407,7 @@ nav{
     font-weight: 500;
 }
 .post-text a{
-    color: #1876f2;
+    color: var(--nav-color);
     text-decoration: none;
 }
 
@@ -456,7 +472,7 @@ nav{
     width: 90%;
     max-width: 350px;
    
-    background: #fff;
+    background: var(--bg-color);
     box-shadow:  0 0 10px rgb(0, 0,0, 0.4);
     border-radius: 4px;
     overflow: hidden;
@@ -510,4 +526,31 @@ nav{
     justify-content: space-between;
     text-decoration: none;
     color: #626262;
+}
+
+#dark-btn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: #ccc;
+    width: 45px;
+    border-radius: 15px;
+    padding: 2px 3px;
+    cursor: pointer;
+    display: flex;
+    transition:  padding-left 0.5s, background 0.5s ;
+}
+
+
+#dark-btn span{
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+#dark-btn.dark-btn-on{
+    padding-left: 23px;
+    background: #0a0a0a;
 }
