--- a/css/style.css
+++ b/css/style.css
@@ -554,3 +554,36 @@ nav{
     padding-left: 23px;
     background: #0a0a0a;
 }
+
+
+/* Profile Page */
+.profile-container{
+    padding:  20px 15%;
+    color: #626262;
+
+}
+.cover-img{
+    width: 100%;
+    border-radius: 6px;
+    margin-bottom: 14px;
+}
+
+.profile-details{
+    background: var(--bg-color);
+    padding: 20px;
+    border-radius: 4px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.pd-row{
+    display: flex;
+    align-items: flex-start;
+}
+
+.pd-images{
+    width: 100px;
+    margin-right: 20px;
+    border-radius: 6px;
+}
+ 
